modifs de font-size

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								Agence Lyonnaise de Web Design
 							</h1>
 							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine letter-sp" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -218,7 +218,7 @@
 							Prêt pour redonner vie à votre projet?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
-							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero letter-sp">Contact</a>
 						</div>
 					</div>
 				</div>
