--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-describedby="journal"><img src="img/1.jpg" alt="" class="img-responsive portfolio-thumb" /></a>
+							<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-describedby="journal">
+								<img src="img/1.jpg" alt="" class="img-responsive portfolio-thumb img" />
+							</a>
 							<h3 class="mg-md text-center" id="journal">
 								Refonte d'un site web pour un journal local
 							</h3>
@@ -176,7 +178,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-describedby="photograph"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="" /></a>
+							<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-describedby="photograph">
+								<img src="img/2.jpg" class="img-responsive portfolio-thumb img" alt="" />
+							</a>
 							<h3 class="mg-md text-center" id="photograph">
 								Création d'un site web pour photographes
 							</h3>
@@ -187,7 +191,9 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-describedby="voyageur"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt=""/></a>
+							<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-describedby="voyageur">
+								<img src="img/3.jpg" class="img-responsive portfolio-thumb img" alt=""/>
+							</a>
 							<h3 class="mg-md text-center" id="voyageur">
 								Création d'un site internet pour un voyageur
 							</h3>
@@ -196,7 +202,9 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d un site pour une agence de mariage" data-frame="snapshot-lb" aria-describedby="mariage"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="" /></a>
+							<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d un site pour une agence de mariage" data-frame="snapshot-lb" aria-describedby="mariage">
+								<img src="img/4.jpg" class="img-responsive portfolio-thumb img" alt="" />
+							</a>
 							<h3 class="mg-md text-center" id="mariage">
 								Conception d'un site pour une agence de mariage
 							</h3>
