--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="page-container">
 		
 		<!-- bloc-0 -->
-		<header class="bloc bgc-white l-bloc " id="bloc-0">
+		<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
 			<div class="container bloc-sm">
 
 				<div class="navbar row">
@@ -97,7 +97,7 @@
 								Web design
 							</h2>
 							<p class="text-center ">
-								Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+								Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 							</p>
 						</div>
 						<div class="col-sm-4">
@@ -105,7 +105,7 @@
 								<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 							</div>
 							<h2 class="mg-md text-center">
-								&nbsp;Stratégie
+								Stratégie
 							</h2>
 							<p class="text-center ">
 								Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -234,7 +234,7 @@
 			<!-- bloc-5-cta END -->
 		</main>
 		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
