amelioration navigation au clavier + contrastes

--- a/contact.html
+++ b/contact.html
@@ -157,8 +157,7 @@
 		</div>
 	</div>
 	<!-- ScrollToTop Button -->
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
-<!-- ScrollToTop Button END-->
+	<a class="bloc-button btn btn-d scrollToTop a-uplift go-up" focusable="true" tabindex="0" onclick="scrollToTarget('1')" onkeydown="scrollIfEnter(event)" aria-label="retour en haut de page"><span class="fa fa-chevron-up" focusable="true" tabindex="0"></span></a><!-- ScrollToTop Button END-->
 </footer>
 <!-- Footer - bloc-8 END -->
 
