--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
 							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Chouette Agence - Lyon" />
-							<h1 class="text-center hero-bloc-text tc-white" id="contenu">
-								Agence Lyonnaise de Web Design
+							<h1 class="text-center hero-bloc-text tc-white h1plus" id="contenu">
+								Agence de Web Design - Lyon
 							</h1>
 							<div class="text-center">
-								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine letter-sp" id="cta-hero">Contact</a>
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine letter-sp" aria-label="page contact" id="cta-hero">Contact</a>
 							</div>
 						</div>
 					</div>
@@ -167,7 +167,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-describedby="journal">
+							<a class="img-realisations" href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-describedby="journal" aria-label="photo de magazines ouverts">
 								<img src="img/1.jpg" alt="" class="img-responsive portfolio-thumb img" />
 							</a>
 							<h3 class="mg-md text-center" id="journal">
@@ -178,7 +178,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-describedby="photograph">
+							<a class="img-realisations" href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-describedby="photograph" aria-label="photo d'une photographe en action">
 								<img src="img/2.jpg" class="img-responsive portfolio-thumb img" alt="" />
 							</a>
 							<h3 class="mg-md text-center" id="photograph">
@@ -191,7 +191,7 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-describedby="voyageur">
+							<a class="img-realisations" href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-describedby="voyageur" aria-label="photo de matériels audiovisuels pour globe-trotters">
 								<img src="img/3.jpg" class="img-responsive portfolio-thumb img" alt=""/>
 							</a>
 							<h3 class="mg-md text-center" id="voyageur">
@@ -202,7 +202,7 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d un site pour une agence de mariage" data-frame="snapshot-lb" aria-describedby="mariage">
+							<a class="img-realisations" href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d un site pour une agence de mariage" data-frame="snapshot-lb" aria-describedby="mariage" aria-label="photo évoquant les préparatifs d'un mariage">
 								<img src="img/4.jpg" class="img-responsive portfolio-thumb img" alt="" />
 							</a>
 							<h3 class="mg-md text-center" id="mariage">
@@ -222,11 +222,11 @@
 				<section aria-label="Envie d'agir" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="bloc-5-cta">
 				<div class="container bloc-lg">
 					<div class="row">
-						<h2 class="mg-md text-center white">
+						<h2 class="mg-md text-center white h2plus">
 							Prêt pour redonner vie à votre projet?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
-							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero letter-sp">Contact</a>
+							<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero letter-sp" aria-label="page contact">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -307,7 +307,7 @@
 				</div>
 			</div>
 				<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		<a class="bloc-button btn btn-d scrollToTop a-uplift go-up" focusable="true" tabindex="0" onclick="scrollToTarget('1')" onkeydown="scrollIfEnter(event)" aria-label="retour en haut de page"><span class="fa fa-chevron-up" focusable="true" tabindex="0"></span></a>
 		<!-- ScrollToTop Button END-->
 		</footer>
 		<!-- Footer - bloc-8 END -->
