--- a/index.html
+++ b/index.html
@@ -49,9 +49,16 @@
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
+								<a href="#bloc-2-services" tabindex="1">Services</a>
 							</li>
 							<li>
-								<a href="contact.html">Contact</a>
+								<a href="#bloc-3-what-i-do" tabindex="2">Missions</a>
+							</li>
+							<li>
+								<a href="#bloc-4-portfolio" tabindex="3">Portfolio</a>
+							</li>
+							<li>
+								<a href="contact.html" tabindex="4">Contact</a>
 							</li>
 						</ul>
 					</nav>
@@ -157,7 +164,7 @@
 			<!-- bloc-3-what-i-do END -->
 
 			<!-- bloc-4-portfolio -->
-			<section aria-label="Portfolio" class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+			<section aria-label="Portfolio" class="bloc bgc-white bg-repeat l-bloc" id="bloc-4-portfolio">
 				<div class="container bloc-lg">
 					<div class="row">
 						<div class="col-sm-12 text-center">
@@ -219,10 +226,10 @@
 
 			<!-- bloc-5-cta -->
 			<!--<section aria-label="Envie d'agir" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">-->
-				<section aria-label="Envie d'agir" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="bloc-5-cta">
+				<section aria-label="Envie d'agir" class="bloc bg-banniere" id="bloc-5-cta">
 				<div class="container bloc-lg">
 					<div class="row">
-						<h2 class="mg-md text-center white h2plus">
+						<h2 class="mg-md text-center white h2plus" id="pret">
 							Prêt pour redonner vie à votre projet?<br>Contactez notre équipe !
 						</h2>
 						<div class="col-sm-12 text-center">
