placeholder + suppression textures en bg pr + de lisibilite

--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
 	<!--<script src="./js/jquery.touchSwipe.js" defer></script>-->
 	<!--<script src="./js/gmaps.js"></script>--> 
 
+	<!-- Start Facebook -->
+	<meta property="og:image" content="https://la-chouette-agence/img/logo300.png" />
+	<meta property="og:title" content="La chouette agence - agence web - Lyon" />
+	<meta property="og:url" content="https://la-chouette-agence.fr" />
+	<meta property="og:locale" content="fr_FR" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="La chouette agence" />
+	<meta property="og:description" content="La Chouette Agence - agence de web design -  Lyon" />
+	<!-- End Facebook -->
+
+	<!-- Start Twitter Card data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@LaChouetteAgence">
+	<meta name="twitter:title" content="La Chouette Agence">
+	<meta name="twitter:description" content="La Chouette Agence - agence de web design -  Lyon">
+	<meta name="twitter:creator" content="@author_handle">
+	<!-- Twitter Summary card images must be at least 200x200px -->
+	<meta name="twitter:image" content="https://la-chouette-agence/img/logo300.png">
+	<!-- End Twitter -->
+
     <title>La Chouette Agence - agence de web design -  Lyon</title>
 
     
