--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,27 @@
 	<script src="./js/jqBootstrapValidation.js"></script> <!--formulaire contact-->
 	<script src="./js/formHandler.js"></script>
 	<!--<script src="./js/jquery.touchSwipe.js" defer></script>  -->
+
+	<!-- Start Facebook -->
+	<meta property="og:image" content="https://la-chouette-agence/img/logo300.png" />
+	<meta property="og:title" content="La chouette agence - agence web - Lyon" />
+	<meta property="og:url" content="https://la-chouette-agence.fr" />
+	<meta property="og:locale" content="fr_FR" />
+	<meta property="og:type" content="website" />
+	<meta property="og:site_name" content="La chouette agence" />
+	<meta property="og:description" content="La Chouette Agence - agence de web design -  Lyon" />
+	<!-- End Facebook -->
+
+	<!-- Start Twitter Card data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@LaChouetteAgence">
+	<meta name="twitter:title" content="La Chouette Agence">
+	<meta name="twitter:description" content="La Chouette Agence - agence de web design -  Lyon">
+	<meta name="twitter:creator" content="@author_handle">
+	<!-- Twitter Summary card images must be at least 200x200px -->
+	<meta name="twitter:image" content="https://la-chouette-agence/img/logo300.png">
+	<!-- End Twitter -->
+
     <title>La Chouette Agence - Contact</title>
 
     
@@ -86,19 +107,19 @@
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" required placeholder="Nom Prénom"/>
 					</div>
 					<div class="form-group">
 						<label for="email"> 
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" required placeholder="sophie.dupont@example.com"/>
 					</div>
 					<div class="form-group">
 						<label for="entry-point">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="text" required id="entry-point" />
+						<input class="form-control" type="text" required id="entry-point" placeholder="bouche à oreille, presse, radio, publicité, client, partenaire..."/>
 					</div>
 					<div class="form-group">
 						<label for="message">
