--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 	<!--<script src="./js/jquery.touchSwipe.js" defer></script>  -->
 
 	<!-- Start Facebook -->
-	<meta property="og:image" content="https://la-chouette-agence/img/logo300.png" />
+	<meta property="og:image" content="https://la-chouette-agence/img/logo.png" />
 	<meta property="og:title" content="La chouette agence - agence web - Lyon" />
 	<meta property="og:url" content="https://la-chouette-agence.fr" />
 	<meta property="og:locale" content="fr_FR" />
@@ -36,15 +36,20 @@
 	<meta name="twitter:description" content="La Chouette Agence - agence de web design -  Lyon">
 	<meta name="twitter:creator" content="@author_handle">
 	<!-- Twitter Summary card images must be at least 200x200px -->
-	<meta name="twitter:image" content="https://la-chouette-agence/img/logo300.png">
+	<meta name="twitter:image" content="https://la-chouette-agence/img/logo.png">
 	<!-- End Twitter -->
 
     <title>La Chouette Agence - Contact</title>
-
     
-<!-- Analytics -->
-
-<!-- Analytics END -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XFBKRBB7Q6"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-XFBKRBB7Q6');
+	</script>
+	<!-- Analytics END -->
     
 </head>
 <body>
