--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 	<!--<script src="./js/gmaps.js"></script>--> 
 
 	<!-- Start Facebook -->
-	<meta property="og:image" content="https://la-chouette-agence/img/logo300.png" />
+	<meta property="og:image" content="https://patrickcharda.github.io/PatrickChardavoineRoques_4_021120/img/logo.png" />
 	<meta property="og:title" content="La chouette agence - agence web - Lyon" />
-	<meta property="og:url" content="https://la-chouette-agence.fr" />
+	<meta property="og:url" content="https://patrickcharda.github.io/PatrickChardavoineRoques_4_021120/" />
 	<meta property="og:locale" content="fr_FR" />
 	<meta property="og:type" content="website" />
 	<meta property="og:site_name" content="La chouette agence" />
@@ -35,15 +35,20 @@
 	<meta name="twitter:description" content="La Chouette Agence - agence de web design -  Lyon">
 	<meta name="twitter:creator" content="@author_handle">
 	<!-- Twitter Summary card images must be at least 200x200px -->
-	<meta name="twitter:image" content="https://la-chouette-agence/img/logo300.png">
+	<meta name="twitter:image" content="https://patrickcharda.github.io/PatrickChardavoineRoques_4_021120/img/logo.png">
 	<!-- End Twitter -->
 
     <title>La Chouette Agence - agence de web design -  Lyon</title>
-
     
-<!-- Analytics -->
- 
-<!-- Analytics END -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XFBKRBB7Q6"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-XFBKRBB7Q6');
+	</script>
+	<!-- Analytics END -->
     
 </head>
 <body>
