renommage images decoratives, reajustement footer page contact

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div class="page-container">
 		
 		<!-- bloc-0 -->
-		<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
+		<header class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 
 				<div class="navbar row">
@@ -199,8 +199,8 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-describedby="journal" aria-label="photo de magazines ouverts">
-								<img src="img/1.jpg" alt="" class="img-responsive portfolio-thumb img" />
+							<a class="img-realisations" href="#" data-lightbox="img/journaux.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-describedby="journal" aria-label="photo de magazines ouverts">
+								<img src="img/journaux.jpg" alt="journaux" class="img-responsive portfolio-thumb img" />
 							</a>
 							<h3 class="mg-md text-center" id="journal">
 								Refonte d'un site web pour un journal local
@@ -210,8 +210,8 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-describedby="photograph" aria-label="photo d'une photographe en action">
-								<img src="img/2.jpg" class="img-responsive portfolio-thumb img" alt="" />
+							<a class="img-realisations" href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb" aria-describedby="photograph" aria-label="photo d'une photographe en action">
+								<img src="img/photographe.jpg" class="img-responsive portfolio-thumb img" alt="photographe" />
 							</a>
 							<h3 class="mg-md text-center" id="photograph">
 								Création d'un site web pour photographes
@@ -223,8 +223,8 @@
 					</div>
 					<div class="row tight-width-whitespace portfolio-row">
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-describedby="voyageur" aria-label="photo de matériels audiovisuels pour globe-trotters">
-								<img src="img/3.jpg" class="img-responsive portfolio-thumb img" alt=""/>
+							<a class="img-realisations" href="#" data-lightbox="img/materiel_audiovisuel.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-describedby="voyageur" aria-label="photo de matériels audiovisuels pour globe-trotters">
+								<img src="img/materiel_audiovisuel.jpg" class="img-responsive portfolio-thumb img" alt="materiel audiovisuel de voyageur"/>
 							</a>
 							<h3 class="mg-md text-center" id="voyageur">
 								Création d'un site internet pour un voyageur
@@ -234,8 +234,8 @@
 							</p>
 						</div>
 						<div class="col-sm-6">
-							<a class="img-realisations" href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d un site pour une agence de mariage" data-frame="snapshot-lb" aria-describedby="mariage" aria-label="photo évoquant les préparatifs d'un mariage">
-								<img src="img/4.jpg" class="img-responsive portfolio-thumb img" alt="" />
+							<a class="img-realisations" href="#" data-lightbox="img/mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d un site pour une agence de mariage" data-frame="snapshot-lb" aria-describedby="mariage" aria-label="photo évoquant les préparatifs d'un mariage">
+								<img src="img/mariage.jpg" class="img-responsive portfolio-thumb img" alt="préparatifs de mariage" />
 							</a>
 							<h3 class="mg-md text-center" id="mariage">
 								Conception d'un site pour une agence de mariage
@@ -339,7 +339,7 @@
 				</div>
 			</div>
 				<!-- ScrollToTop Button -->
-		<a class="bloc-button btn btn-d scrollToTop a-uplift go-up" focusable="true" tabindex="0" onclick="scrollToTarget('1')" onkeydown="scrollIfEnter(event)" aria-label="retour en haut de page"><span class="fa fa-chevron-up" focusable="true" tabindex="0"></span></a>
+		<a class="bloc-button btn btn-d scrollToTop a-uplift go-up" tabindex="0" onclick="scrollToTarget('1')" onkeydown="scrollIfEnter(event)" aria-label="retour en haut de page"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 		</footer>
 		<!-- Footer - bloc-8 END -->
