--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<header class="bloc bgc-white l-bloc " id="bloc-0" role="banner">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="navbar row">
 			<div class="navbar-header">
@@ -143,7 +143,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-7 END -->
 
 </main>
@@ -183,7 +183,7 @@
 		</div>
 	</div>
 	<!-- ScrollToTop Button -->
-	<a class="bloc-button btn btn-d scrollToTop a-uplift go-up" focusable="true" tabindex="0" onclick="scrollToTarget('1')" onkeydown="scrollIfEnter(event)" aria-label="retour en haut de page"><span class="fa fa-chevron-up" focusable="true" tabindex="0"></span></a><!-- ScrollToTop Button END-->
+	<a class="bloc-button btn btn-d scrollToTop a-uplift go-up" tabindex="0" onclick="scrollToTarget('1')" onkeydown="scrollIfEnter(event)" aria-label="retour en haut de page"><span class="fa fa-chevron-up"></span></a><!-- ScrollToTop Button END-->
 </footer>
 <!-- Footer - bloc-8 END -->
 
