suppression classes inutiles pour bandeaux + modif taille h1

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,9 @@
 
 	<main>
 		<!-- bloc-6 -->
-		<section aria-label="Bandeau d'accueil de la page contact" class="bloc bg-dots-bg bg-repeat bg-banniere bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+		<section aria-label="Bandeau d'accueil de la page contact" class="bloc bg-banniere" id="bloc-6">
+		<!--<section aria-label="Bandeau d'accueil de la page contact" class="bloc bg-dots-bg bg-repeat bg-banniere bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+-->
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
