--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 
 		<main aria-labelledby="contenu">
 				<!-- bloc-1-presentation -->
-			<section aria-label="Présentation de l'agence" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+			<section aria-label="Présentation de l'agence" class="bloc bg-banniere b-parallax" id="bloc-1-hero">
+			<!--			<section aria-label="Présentation de l'agence" class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+-->
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
