ajout lien vers openstreetmap pr access adresse agence+ lien mailto

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<script async src="./js/blocs.js"></script> <!--fonctionnement slider-->
 	<script async src="./js/jqBootstrapValidation.js"></script> <!--formulaire contact-->
 	<script async src="./js/formHandler.js"></script>
-	<!--<script src="./js/jquery.touchSwipe.js" defer></script>  -->
+	<script src="./js/jquery.touchSwipe.js" defer></script>
 
 	<!-- Start Facebook -->
 	<meta property="og:image" content="https://la-chouette-agence/img/logo.png" />
@@ -140,7 +140,7 @@
 					</div>
 					<div class="col-sm-6">
 						<p>
-							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+							<a href="mailto:contact@lachouetteagence.com" id="mailto">contact@lachouetteagence.com</a><br><a href="https://www.openstreetmap.org/search?query=2%20place%20Sathonay%2069001%20Lyon#map=19/45.76894/4.83066" id="office_address" target="_blank">2 place Sathonay 69001 Lyon</a><br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 						</p>
 					</div>
 				</div>
