--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	<script async src="./js/jquery-2.1.0.js" ></script>
 	<script async src="./js/bootstrap.js"></script>
 	<script async src="./js/blocs.js"></script>
-	<!--<script src="./js/jquery.touchSwipe.js" defer></script>-->
-	<!--<script src="./js/gmaps.js"></script>--> 
+	<script src="./js/jquery.touchSwipe.js" defer></script>
 
 	<!-- Start Facebook -->
 	<meta property="og:image" content="https://patrickcharda.github.io/PatrickChardavoineRoques_4_021120/img/logo.png" />
