--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</div>
 					<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav" id="sitemenu">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
+							<li id="accueil-txt">
 								<a href="index.html">Accueil</a>
 							</li>
 							<li>
