--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-	<script async src="./js/jquery-2.1.0.js"></script>
-	<script async src="./js/bootstrap.js"></script>
-	<script async src="./js/blocs.js"></script> <!--fonctionnement slider-->
-	<script async src="./js/jqBootstrapValidation.js"></script> <!--formulaire contact-->
-	<script async src="./js/formHandler.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script> <!--fonctionnement slider-->
+	<script src="./js/jqBootstrapValidation.js"></script> <!--formulaire contact-->
+	<script src="./js/formHandler.js"></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 
 	<!-- Start Facebook -->
